src/modules/market/components/market-outcome-charts--header/market-outcome-charts--header.styles.less
@import (reference) '~assets/styles/shared';

.MarketOutcomeChartsHeader {
  display: flex;
  width: 100%;
  z-index: @above-all-content;
}

.MarketOutcomeChartsHeader__Header {
  display: flex;
  flex: 1;
  margin-bottom: 1em;

  h2,
  span {
    &:extend(.caps--large);
  }

  h2 {
    color: @color-white;
    margin-right: 1em;
  }

  span {
    color: @color-gray;
  }
}

.MarketOutcomeChartsHeader__precision-selector {
  display: flex;
  flex: 1;
  justify-content: flex-end;

  button {
    color: @color-gray;
    font-size: @font-size-rather-large;
    margin: 0 0 -0.5rem; // NOTE -- this is so that it doesn't exceed the desired height in relation to the adjacent header
    padding: 0 0.15em;
    position: relative;
    top: -8px;
  }
}

.MarketOutcomeChartsHeader__Candlestick {
  flex: 2.5;
  margin-right: 30px;
}

.MarketOutcomeChartsHeader__Depth {
  flex: 1;
  margin-right: 30px;
}

.MarketOutcomeChartsHeader__Orders {
  flex: 1;
}

.MarketOutcomeChartsHeader__stats {
  display: flex;
  height: 100%;
  justify-content: space-between;
  margin-bottom: 0.4em;
  width: 100%;
}

.MarketOutcomeChartsHeader__stat {
  &:extend(.caps--small);

  display: flex;
}

.MarketOutcomeChartsHeader__stat--right {
  &:extend(.MarketOutcomeChartsHeader__stat);

  justify-content: flex-end;
}

.MarketOutcomeChartsHeader__stat-title {
  color: @color-white;
  white-space: nowrap;
}

.MarketOutcomeChartsHeader__stat-value {
  color: @color-gray;
  flex: 1 0 50%;
  margin-left: 0.4em;
}

